<resources>
    <string name="app_name">MaReu</string>
    <string name="new_meeting">Nouvelle réunion</string>
    <string name="action_filter">Filtrer par lieu et/ou date</string>
    <string name="action_check">Valider</string>
    <string name="action_close">Fermer</string>

    <string name="bienvenue">Bienvenue</string>
    <string name="message_accueil">Veuillez créer une réunion ou modifier les critères de filtre</string>

    <string name="addmeeting_preference_file_key">com.companyx.mareu.addmeeting_preference_file_key</string>
    <string name="addmeeting_sujet_key">BUNDLE_STATE_Sujet</string>
...
