...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    Filtre des réunions par date ou par lieu-->
    <group android:id="@+id/group2">
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/filtrerSalleHeure"
                android:title="Filtre par lieu ou par date"
                app:showAsAction="withText"></item>

            <item
                android:id="@+id/sansFiltre"
                android:title="Supprimer les filtres"
                app:showAsAction="withText"></item>
...
